# websam

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
apps/bundler-matrix/: README.md
apps/bundler-matrix/vite/: index.html  package.json  tsconfig.json
apps/bundler-matrix/webpack/: package.json  webpack.config.cjs
apps/demo/: index.html  package.json  vite.config.ts
apps/demo/public/: _headers
apps/demo/src/: App.css  App.tsx  ImageTab.tsx  VideoTab.tsx  main.tsx
apps/studio/: .env.example  .gitignore  DESIGN.md  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: PROGRESS.md
docs/plans/: studio-and-fabri-product.md
examples/quickstart/: README.md  index.html  package.json  vite.config.ts
integrations/fabri/: .env.example  README.md  pyproject.toml
integrations/fabri/.agent/: fabri_agent.yaml
integrations/fabri/.agent/prompts/: orchestrator.md
integrations/fabri/.agent/prompts/domains/: video_editing.md
integrations/fabri/docs/: fabri-contracts.md
integrations/fabri/service/: Dockerfile  Dockerfile.dockerignore  __init__.py  app.py  docker-compose.yml  settings.py
integrations/fabri/tests/: conftest.py  test_agent_e2e.py  test_gateway.py  test_tools.py  test_websam_ort.py
integrations/fabri/tools/video_editing/: _track_worker.py  _websam_ort.py  vid_composite.json  vid_composite.py  vid_concat.json  vid_concat.py  vid_export_matte.json  vid_export_matte.py  vid_extract_frame.json  vid_extract_frame.py  vid_ground_text.json  vid_ground_text.py  vid_poll_job.json  vid_poll_job.py  vid_segment.json  vid_segment.py  vid_track.json  vid_track.py  vid_trim.json  vid_trim.py
tools/export/: README.md  pyproject.toml
tools/export/spikes/m2-edgetam/: .gitignore  FINDINGS.md  capture_golden.py  clip_util.py  dump_constants.py  e2e_loop.py  export_edgetam.py  parity_graphs.py
tools/export/spikes/s0/: .gitignore  FINDINGS.md  inspect_graphs.py
tools/export/src/websam_export/: __init__.py  export_edgetam.py  manifest.py  manifest_edgetam.py  spec.py
tools/export/src/websam_export/wrappers/: __init__.py  edgetam.py
tools/export/tests/: test_export_edgetam_production.py  test_manifest.py  test_spec.py  test_wrappers_edgetam.py
tools/goldens/: .gitignore  README.md  fetch-models.mjs  generate.mjs  make-scene.mjs  make-video-golden.py  package.json
(+50 files in other folders)
