[project]
name = "websam-fabri"
version = "0.1.0"
description = "fabri video_editing tools: EdgeTAM ONNX tracking loop, pure onnxruntime, no torch/transformers at runtime."
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "onnxruntime>=1.27.0,<1.28.0",
    "numpy>=2.5.1,<3",
    "pillow>=12.3.0,<13",
    "imageio>=2.37.0,<3",
    "imageio-ffmpeg>=0.6.0,<1",
    # vid_ground_text's real (non-stub) path: Gemini vision call for
    # text->box/point grounding. Same provider as the fabri agent's own
    # LLM (GEMINI_API_KEY), so one key covers both roles. Not needed to
    # run the test suite (WEBSAM_GROUND_TEXT_STUB covers that offline).
    "google-genai>=1.0.0,<2",
    # gateway service (service/app.py) — keep in sync with service/Dockerfile pip install list
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9,<0.1",
    "python-dotenv>=1.0,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    # fastapi.testclient.TestClient requires httpx
    "httpx>=0.27,<1",
]

[tool.uv]
package = false
