[project]
name = "websam-export"
version = "0.1.0"
description = "Export pipeline for WebSAM: SAM3 / EdgeTAM video trackers -> ONNX graphs + signed manifest for the browser runtime."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Rushikesh Patade" }]
# Base deps stay light so the dev/test environment resolves fast: tests only
# need stdlib + pytest. Heavy model-export deps live in the "export" extra.
dependencies = [
    "onnx>=1.22.0,<2",
    # Kept on the 1.27 line to match the onnxruntime-web pin (">=1.27.0 <1.28.0")
    # used by the browser runtime, so parity checks run against the same ORT release.
    "onnxruntime>=1.27.0,<1.28.0",
    "huggingface-hub>=1.22.0,<2",
    "numpy>=2.5.1,<3",
    "pillow>=12.3.0,<13",
]

[project.urls]
Homepage = "https://github.com/Rushour0/websam"
Repository = "https://github.com/Rushour0/websam"

[project.optional-dependencies]
# Only needed to actually run the export pipeline (wrappers -> torch.export ->
# onnxslim). Install with: uv sync --extra export
export = [
    "torch>=2.12.1,<3",
    "transformers>=5.13.0,<6",
    "onnxslim>=0.1.94,<0.2",
]

[dependency-groups]
dev = ["pytest>=9.1.1,<10"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
